# sig-profiling

./: README.md  plan.md
.github/: CODEOWNERS  renovate.json5
.github/workflows/: go.yml  ossf-scorecard.yml
otlp-bench/: .gitignore  README.md  bench.go  go.mod  go.sum  main.go  main_test.go  version_add.go
otlp-bench/bench-setup/: Dockerfile.custom  README.md  build-custom-collector.sh  builder-manifest.yaml  install.sh
otlp-bench/bench-setup/k8s/netbox/: load-generator.yaml  values.yaml
otlp-bench/bench-setup/k8s/opentelemetry-collector/: clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  daemonset.yaml  serviceaccount.yaml
otlp-bench/bench-setup/k8s/opentelemetry-demo/: values.yaml
otlp-bench/internal/otlpbuild/: otlpbuild.go  otlpbuild_test.go
otlp-bench/internal/otlpbuild/testdata/import/: import_test.go
otlp-bench/internal/otlpgen/: main.go
otlp-bench/internal/otlpversions/: main.go
otlp-bench/internal/otlpversions/gh733/opentelemetry/proto/collector/logs/v1/: logs_service.pb.go
otlp-bench/internal/otlpversions/gh733/opentelemetry/proto/collector/metrics/v1/: metrics_service.pb.go
otlp-bench/internal/otlpversions/gh733/opentelemetry/proto/collector/profiles/v1development/: profiles_service.pb.go
otlp-bench/internal/otlpversions/gh733/opentelemetry/proto/collector/trace/v1/: trace_service.pb.go
otlp-bench/internal/otlpversions/gh733/opentelemetry/proto/common/v1/: common.pb.go
otlp-bench/internal/otlpversions/gh733/opentelemetry/proto/logs/v1/: logs.pb.go
otlp-bench/internal/otlpversions/gh733/opentelemetry/proto/metrics/v1/: metrics.pb.go
otlp-bench/internal/otlpversions/gh733/opentelemetry/proto/profiles/v1development/: profiles.pb.go
otlp-bench/internal/otlpversions/gh733/opentelemetry/proto/resource/v1/: resource.pb.go
otlp-bench/internal/otlpversions/gh733/opentelemetry/proto/trace/v1/: trace.pb.go
otlp-bench/reports/2025-11-27-gh733-resource-attr-dict/: README.md
otlp-bench/testdata/: k8s.otlp  profile.otlp
otlp-bench/versions/v1.9.0/slim/otlp/collector/logs/v1/: logs_service.pb.go
otlp-bench/versions/v1.9.0/slim/otlp/collector/metrics/v1/: metrics_service.pb.go
otlp-bench/versions/v1.9.0/slim/otlp/collector/profiles/v1development/: profiles_service.pb.go
otlp-bench/versions/v1.9.0/slim/otlp/collector/trace/v1/: trace_service.pb.go
otlp-bench/versions/v1.9.0/slim/otlp/common/v1/: common.pb.go
otlp-bench/versions/v1.9.0/slim/otlp/logs/v1/: logs.pb.go
otlp-bench/versions/v1.9.0/slim/otlp/metrics/v1/: metrics.pb.go
otlp-bench/versions/v1.9.0/slim/otlp/profiles/v1development/: profiles.pb.go
otlp-bench/versions/v1.9.0/slim/otlp/resource/v1/: resource.pb.go
otlp-bench/versions/v1.9.0/slim/otlp/trace/v1/: trace.pb.go
otlp-size-analysis/: .gitignore  README.md  go.mod  go.sum  mise.toml  otlp-size-analysis.py  pyproject.toml
otlp-size-analysis/cmd/otlp-analyze/: main.go
process-context/: README.md  otel_process_ctx.proto
process-context/c-and-cpp/: CMakeLists.txt  README.md  build.sh  example_ctx.c  otel_process_ctx.c  otel_process_ctx.cpp  otel_process_ctx.h  otel_process_ctx_dump.sh  process_context.proto
profcheck/: check.go  check_test.go  go.mod  go.sum
profcheck/cmd/profcheck/: main.go
tools/profcheck/: check.go  check_test.go  go.mod  go.sum  profcheck.go
